css/metabox.css
/* CSS Document */ 

.edit-form-section {
	position: absolute;
	left: 9999px;
}

#page_builder {
	background: none;
	border: none;
	box-shadow: none;
}

#page_builder .hidden-input {
	display: none;
}

#page_builder > H3.hndle {
	display: none;
}

#page_builder > .handlediv {
	display: none;
}

#page_builder > .inside {
	padding: 0 0 0;
}


#pagebuilder-edit-controls {
	text-align: right;
	padding: 0 0 10px;
}

#pagebuilder-edit-controls .pagebuilder-editor-options {
	display: inline-block;
	padding-left: 10px;
}

#pagebuilder-edit-controls .title-text {
	font-size: 1.4em;
	font-weight: 400;
}

#pagebuilder-edit-controls .pagebuilder-editor-options a {
	display: inline-block;
	padding: 15px 25px;
	font-size: 1.1em;
	text-decoration: none;
	color: #555;
	background: #eee;
	border: 1px solid #ccc;
	webkit-box-shadow: inset 0 1px 0 #fff,0 1px 0 rgba(0,0,0,.08);
	box-shadow: inset 0 1px 0 #fff,0 1px 0 rgba(0,0,0,.08);
}

#pagebuilder-edit-controls .pagebuilder-editor-options a.active {
	background: #fff;
}

#pagebuilder-edit-controls .pagebuilder-editor-options a.content-editor {
	border-radius: 0 4px 4px 0;
	border-left: 1px solid #fff;
}

#pagebuilder-edit-controls .pagebuilder-editor-options a.layout-editor {
	border-radius: 4px 0 0 4px;
	border-right: 1px solid #ccc;
}

#pagebuilder-edit-controls .pagebuilder-editor-options a:hover {
	background: #fff;
	color: #09C;
}

#pagebuilder-content-editor .content-block-editor {
	margin: 0 0 30px;
}

#pagebuilder-content-editor .content-block-editor.inactive {
	position: absolute;
	left: 9999px;
}

#pagebuilder-content-editor .content-block-editor.active-lb {
	display: block !important;
	position: fixed;
	width: 70%;
	left: 0;
	margin-left: 15%;
	top: 10%;
	max-height: 80%;
	background: #fcfcfc;
	z-index: 800;
	overflow-y: auto;
}

#pagebuilder-content-editor .content-block-editor.active-lb iframe,
#pagebuilder-content-editor .content-block-editor.active-lb table.mceLayout {
	height: 250px !important;
}

#pagebuilder-content-editor .content-block-editor > .inner-wrapper > header {
	font-size: 20px;
	font-weight: bold;
	padding: 10px 0;
	border-top: 1px solid #ddd;
}

#pagebuilder-content-editor .content-block-editor > .inner-wrapper > header p {
	display: inline-block;
	margin-right: 20px;
}

#pagebuilder-content-editor .content-block-editor > .inner-wrapper > footer {
text-align: center;
padding: 10px 0;
border-top: 1px solid #ccc;
}

#pagebuilder-content-editor .content-block-editor.active-lb > .inner-wrapper {
	margin: 0 20px;
	padding-bottom: 20px;
}

#pagebuilder-layout-editor {
	display: none;
}

#pagebuilder-layout-editor > .inner-wrapper {
}

#pagebuilder-layout-editor .add-row-action {
	background: #fff url(../images/add-row-2.png) no-repeat center center;
	margin: 10px auto;
	display: block;
	width: 50px;
	height: 50px;
	border: 1px solid #ddd;
	border-radius: 4px;
	-webkit-box-shadow: inset 0 1px 0 rgba(120,200,230,.5),0 1px 0 rgba(0,0,0,.15);
	box-shadow: inset 0 1px 0 rgba(120,200,230,.5),0 1px 0 rgba(0,0,0,.15);
}
#pagebuilder-layout-editor .add-row-action:hover {
	background-color: #ddd;
}

#pagebuilder-layout-editor .layout-row {
	border: 1px solid #ccc;
	background: #fff;
}

#pagebuilder-layout-editor header.row-header {
	background: #eee;
	border-bottom: 1px solid #ddd;
	position: relative;
	height: 40px;
}
#pagebuilder-layout-editor header.row-header .title-text {
	display: block;
	padding: 0 15px;
	text-decoration: none;
	color: #555;
	height: 40px;
	line-height: 40px;
}

#pagebuilder-layout-editor header.row-header .title-text:hover {
	background: #ddd;
}


#pagebuilder-layout-editor .column-wrapper {
	padding: 5px 0;
	margin: 0;
}

#pagebuilder-layout-editor .layout-column {
	padding: 0 0 20px 0;
	vertical-align: top;
	background-position: top right;
}
#pagebuilder-layout-editor .layout-column > .inner-wrapper{
	margin: 0 15px;
}

/***** START LAYOUTS ***********************************/

#pagebuilder-layout-editor .column-layout-1 .column-1 {
	display: block;
}

#pagebuilder-layout-editor .column-layout-1-2 .column-1 {
	display: inline-block;
	width: 70%;
}
#pagebuilder-layout-editor .column-layout-1-2 .column-2 {
	display: inline-block;
	width: 30%;
}
.pagbuilder-layout-full .column-1 {display: block; background: none !important;}
.pagbuilder-layout-full .column-2 {display: none;}
.pagbuilder-layout-full .column-3 {display: none;}
.pagbuilder-layout-full .column-4 {display: none;}

.pagbuilder-layout-aside .column-1 {display: block; margin-right: 250px;}
.pagbuilder-layout-aside .column-2 {display: block; width: 250px; float: right; background: none !important;}
.pagbuilder-layout-aside .column-3 {display: none;}
.pagbuilder-layout-aside .column-4 {display: none;}

.pagbuilder-layout-half .column-1 {display: inline-block; width: 50%;}
.pagbuilder-layout-half .column-2 {display: inline-block; width: 50%; background: none !important;}
.pagbuilder-layout-half .column-3 {display: none;}
.pagbuilder-layout-half .column-4 {display: none;}

.pagbuilder-layout-third-right .column-1 {display: inline-block; width: 66.66%;}
.pagbuilder-layout-third-right .column-2 {display: inline-block; width: 33.33%; background: none !important;}
.pagbuilder-layout-third-right .column-3 {display: none;}
.pagbuilder-layout-third-right .column-4 {display: none;}

.pagbuilder-layout-third-left .column-1 {display: inline-block; width: 33.33%;}
.pagbuilder-layout-third-left .column-2 {display: inline-block; width: 66.66%; background: none !important;}
.pagbuilder-layout-third-left .column-3 {display: none;}
.pagbuilder-layout-third-left .column-4 {display: none;}

.pagbuilder-layout-thirds .column-1 {display: inline-block; width: 33.33%;}
.pagbuilder-layout-thirds .column-2 {display: inline-block; width: 33.33%; }
.pagbuilder-layout-thirds .column-3 {display: inline-block; width: 33.33%; background: none !important;}
.pagbuilder-layout-thirds .column-4 {display: none;}

.pagbuilder-layout-fourths .column-1 {display: inline-block; width: 25%;}
/* ... */

